# securityProject

./: .gitignore  CMakeLists.txt  Definitions.h  PacketLayouts.h  README.md  client.h  server.h  test_user  update_executables.sh
Common/: CMakeLists.txt  NetworkApplication.cpp  NetworkApplication.h  PacketLayouts.cpp  PacketLayouts.h  Utils.cpp  Utils.h
Executables/: install_deps.sh
secureClient/: CMakeLists.txt  ClientApplication.cpp  ClientApplication.h  SecureClient.cpp
secureServer/: CMakeLists.txt  JwtUtils.cpp  JwtUtils.h  SecureServer.cpp  ServerApplication.cpp  ServerApplication.h
secureServer/Auth/: LocalUserStorage.cpp  LocalUserStorage.h  UserStorage.cpp  UserStorage.h
serverFiles/: some_file.txt  some_file_copy.txt
